syntax = "proto3";

package mfit;

import "google/protobuf/timestamp.proto";

import "mfit/protos/log_constructor.proto";

message Event {
  enum Topic {
    LOG_ADD = 0;
  }

  enum State {
    STARTING = 0;
    COMPLETE = 1;
  }

  string interfaceVersion = 1;

  Topic topic = 2;
  State state = 3;
  LogConstructor arguments = 4;
  string correlationId = 5;

  google.protobuf.Timestamp createdAt = 6;
}
